--- a/Assignment4/Stock_market_prediction_using_LSTM_and_1D_conv_wavenet.ipynb
+++ b/Assignment4/Stock_market_prediction_using_LSTM_and_1D_conv_wavenet.ipynb
@@ -647,7 +647,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 952
+          "height": 1000
         },
         "outputId": "23f586da-6d09-454e-8a73-0404aa464dbd"
       },
@@ -658,7 +658,7 @@
         "                    shuffle=False, validation_data=(trim_dataset(x_val, BATCH_SIZE),\n",
         "                    trim_dataset(y_val, BATCH_SIZE)), callbacks=[csv_logger])"
       ],
-      "execution_count": 0,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,6 +717,12 @@
             "Epoch 26/30\n",
             " - 10s - loss: 0.0786 - acc: 1.7873e-04 - val_loss: 0.1707 - val_acc: 0.0000e+00\n",
             "Epoch 27/30\n",
+            " - 10s - loss: 0.0786 - acc: 1.7873e-04 - val_loss: 0.1707 - val_acc: 0.0000e+00\n",
+            "Epoch 28/30\n",
+            " - 10s - loss: 0.0786 - acc: 1.7873e-04 - val_loss: 0.1707 - val_acc: 0.0000e+00\n",
+            "Epoch 29/30\n",
+            " - 10s - loss: 0.0786 - acc: 1.7873e-04 - val_loss: 0.1707 - val_acc: 0.0000e+00\n",
+            "Epoch 30/30\n",
             " - 10s - loss: 0.0786 - acc: 1.7873e-04 - val_loss: 0.1707 - val_acc: 0.0000e+00\n"
           ],
           "name": "stdout"
